--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "react-js-pagination": "^3.0.2",
         "react-paginate": "^6.3.0",
         "react-redux": "^7.1.0",
+        "react-route-guard": "^1.0.7",
         "react-router-dom": "^5.0.1",
         "react-scripts": "3.0.1",
         "redux": "^4.0.4",
