--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "eslintConfig": {
         "extends": "react-app"
     },
+    "jest": {
+        "snapshotSerializers": [
+            "enzyme-to-json/serializer"
+        ]
+    },
     "browserslist": {
         "production": [
             ">0.2%",
@@ -38,5 +43,12 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "babel-jest": "^24.9.0",
+        "enzyme": "^3.10.0",
+        "enzyme-adapter-react-16": "^1.14.0",
+        "enzyme-to-json": "^3.4.0",
+        "jest": "^24.7.1"
     }
 }
