--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.14.0",
         "enzyme-to-json": "^3.4.0",
-        "jest": "^24.7.1"
+        "jest": "^24.7.1",
+        "redux-mock-store": "^1.5.3"
     },
     "jest": {
-       
         "snapshotSerializers": [
             "enzyme-to-json/serializer"
         ]
